# CAR_HMI

src/: BatteryGauge.qml  BatteryPage.qml  CMakeLists.txt  Car.qml  CarHmi.pro  CarPage.qml  DaignosticBuffer.qml  Footer.qml  Gauge.qml  Gauge_main.qml  HMchart.qml  Header.qml  MainPage.qml  NavigationPage.qml  Notification.qml  Speed_Gauge.qml  TEXT.qml  Uploads.qml  main.cpp  main.qml  sGauge.qml
